# zscilib

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.zscilib  LICENSE  README.md  TODO.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  ahrs_8h.html  ahrs_8h_source.html  annotated.html  aqua_8h.html  aqua_8h_source.html  atomic_8h.html  atomic_8h_source.html  base_8h.html  base_8h_source.html  calibration_8h.html  calibration_8h_source.html  chemistry_8c.html  chemistry_8c_source.html  chemistry_8h.html  chemistry_8h_source.html  classes.html  colorimetry_8h.html  colorimetry_8h_source.html  compass_8h.html  compass_8h_source.html  complementary_8h.html  complementary_8h_source.html  complex_8c.html  complex_8c_source.html  complex_8h.html  complex_8h_source.html  consts_8h.html  consts_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_87c77859bb9aab504982915df9797ab5.html  dir_91bedb2b84529b114380eb5346af7e61.html  (+268 more)
.github/workflows/: doc.yml
benchmarking/: README.md
doc/: ARM_Assembly.md  Doxyfile  README.md  adding_funcs.md  arm_asm_adding.md  arm_asm_gnu_inline.md  arm_asm_primer.md
include/zsl/: chemistry.h  colorimetry.h  complex.h  consts.h  euler.h  instrumentation.h  interp.h  matrices.h  neural.h  probability.h  quaternions.h  statistics.h  vectors.h  zsl.h
samples/: README.md
samples/benchmarking/: .gitignore  CMakeLists.txt  README.rst  benchmark.c  prj.conf  sample.yaml
samples/shell/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/standalone/: Makefile  README.md  main.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_10.js  files_11.js  files_12.js  files_13.js  files_2.js  (+75 more)
src/: chemistry.c  complex.c  interp.c  matrices.c  probability.c  quaternions.c  shell.c  statistics.c  vectors.c  zsl.c
src/colorimetry/: colorimetry.c  conv.c  illuminants.c  lumeff.c  norm.c  observers.c  rgbccms.c  shell.c
src/orientation/: ahrs.c  compass.c  euler.c  gravity.c  quaternions.c  shell.c
src/physics/: atomic.c  energy.c  (+21 more)
tests/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
tests/src/: calibration_tests.c  clr_conv.c  compass_tests.c  complex_tests.c  data.c  data.h  floatcheck.c  floatcheck.h  fusion_tests.c  interp_tests.c  main.c  matrices.c  matrix_tests.c  orientation.c  orientation_tests.c  phy_atom_tests.c  phy_dyn_tests.c  phy_ecmp_tests.c  phy_elcty_tests.c  phy_elec_tests.c  phy_ener_tests.c  phy_fluid_tests .c  phy_gas_tests.c  phy_grav_tests.c  phy_kin_tests.c  phy_magn_tests.c  phy_mass_tests.c  phy_mom_tests.c  phy_opt_tests.c  phy_photon_tests.c  phy_proj_tests.c  phy_rot_tests.c  phy_sound_tests.c  phy_thermo_tests.c  phy_work_tests.c  probability_tests.c  quaternions.c  statistics_tests.c  vector_tests.c  vectors.c
zephyr/: module.yml
(+137 files in other folders)
